Changelog for Poi
=================

    (name of developer listed in brackets)


Poi 1.2 - (Unreleased)
----------------------

- Remove references to contentmigration, as this was only needed for
  migrations from 1.0 beta 2 to 1.0 rc 1.
  [maurits]

- Remove UML model as we do not use that anymore.
  [maurits]


Poi 1.1 - Released December 27, 2007
------------------------------------


Poi 1.1 rc 4 - Released December 22, 2007
-----------------------------------------

    - Fix "TypeError: can't pickle code objects" when updating the
      schema of PoiTrackers by using the new 'isDataGridFilled'
      validator.
      Fixes http://plone.org/products/poi/issues/160
      [maurits]

    - Added more Norwegian translations.
      [Espen Moe-Nilssen]


Poi 1.1 rc 3 - Released December 14, 2007
---------------------------------------

    - Fix Inconsistent linking to other issues and changesets:
        Links in the steps field of an issue are now also detected.
      Allow more links to be detected:
      - issues: #1, issue:1, ticket:1, bug:1.
      - changesets/revisions: r1, changeset:1, [1].
      Add lots of tests for the link detection in a tracker.
      http://plone.org/products/poi/issues/159
      [Per Erik Strandberg, maurits]


Poi 1.1 rc 2 - Released December 5, 2007
--------------------------------------

    - Add our indexes to the catalog with some code in AppInstall.py.
      Doing it there instead of in profiles/default/catalog.xml like
      previously means we do not need to reindex those indexes after
      every reinstall.
      [maurits]


Poi 1.1 rc 1 - Released December 4, 2007
---------------------------------------

    - Use email_from name of portal in the emails.
      Fixes http://plone.org/products/poi/issues/154
      [maurits]

    - Fixed error in deleting response to an issue.
      Fixes http://plone.org/products/poi/issues/151
      [maurits]

    - Added partial Norwegian translation.
      [Espen Moe-Nilssen]
