@@ -49,10 +49,7 @@ except ImportError:
 
 from Products.CMFCore import utils as cmfutils
 
-try: # New CMF 
-    from Products.CMFCore import permissions as CMFCorePermissions
-except: # Old CMF 
-    from Products.CMFCore import CMFCorePermissions
+from Products.CMFCore import permissions as CMFCorePermissions
 
 from Products.CMFCore import DirectoryView
 from Products.Archetypes.atapi import *
